# always-cd-ripper

./: AlwaysCDRipper.wixobj  AlwaysCDRipper.wxs  BUILD.md  CMakeLists.txt  CMakeSettings.json  README.md  build_msi_cdr.bat  slnx.sqlite
src/: main.cpp
src/metadata/: CoverArt.cpp  CoverArt.h  GnuDb.cpp  GnuDb.h  MusicBrainz.cpp  MusicBrainz.h  TagWriter.cpp  TagWriter.h
src/ripper/: CdDrive.cpp  CdDrive.h  FlacEncoder.cpp  FlacEncoder.h  ParanoiaReader.cpp  ParanoiaReader.h  RipWorker.cpp  RipWorker.h
src/ui/: CdDrive.cpp  CdDrive.h  LogViewer.cpp  LogViewer.h  MainWindow.cpp  MainWindow.h  MetadataEditor.cpp  MetadataEditor.h  SectorMap.cpp  SectorMap.h
wix/: AlwaysCDRipper.wixobj  AlwaysCDRipper.wxs  AlwaysCDRipper_Setup.wixpdb  build_msi.bat
